@startuml
skinparam linetype ortho

'
' ENUMS
'
enum ROLE {
  OWNER
  ADMIN
  USER
}

enum DEVICES {
  SENSOR
  ACTUATOR
}

'
' ENTITIES
'
entity "User" {
  * id: String
  ---
  username: String
  p_hash: String
  role: ROLE
  ---
  created_at: DateTime
  updated_at: DateTime
}

entity "Zone" {
  * id: String
  ---
  name: String
  ---
  created_at: DateTime
  updated_at: DateTime
}

entity "UserInZone" {
  * user_id: String <<FK>>
  * zone_id: String <<FK>>
  ---
  created_at: DateTime
  updated_at: DateTime
}

entity "Room" {
  * id: String
  ---
  name: String
  zone_id: String <<FK>>
  ---
  created_at: DateTime
  updated_at: DateTime
}

entity "Device" {
  * id: String
  ---
  ip: String
  status: Boolean
  type: DEVICES
  room_id: String <<FK>>
  ---
  created_at: DateTime
  updated_at: DateTime
}

entity "StatDataType" {
  * id: String
  ---
  name: String   // ej: int, float, string
  unit: String   // ej: #, %, años, metros
  ---
  created_at: DateTime
  updated_at: DateTime
}

entity "StatType" {
  * id: String
  ---
  name: String          ' ej: PEOPLE COUNT, AGE AVG
  data_type_id: String <<FK>>
  ---
  created_at: DateTime
  updated_at: DateTime
}

entity "Stats" {
  * id: String
  --
  quantity: Int
  time: DateTime
  snapshot_id: String
  device_id: String <<FK>> (nullable)
  stat_type_id: String <<FK>>
  ---
  created_at: DateTime
  updated_at: DateTime
}

entity "Log" {
  * id: String
  --
  time: DateTime
  body: String
  code: Int
  device_id: String <<FK>>
  ---
  created_at: DateTime
  updated_at: DateTime
}

'
' RELATIONSHIPS
'
User "1" -- "n" UserInZone : has
Zone "1" -- "n" UserInZone : has

Zone "1" -- "n" Room : has
Room "1" -- "n" Device : has

Device "1" -- "n" Stats : has
Device "1" -- "n" Log : has

StatDataType "1" -- "n" StatType : defines
StatType "1" -- "n" Stats : categorizes

'
' ENUM RELATIONS
'
User --> ROLE
Device --> DEVICES

@enduml